@@ -10,7 +10,7 @@ typedef void (*xml6_gbl_MessageCallback) (const char *msg,
                                           const char *argt,
                                           ...);
 
-DLLEXPORT void xml6_gbl_set_generic_error_handler(xml6_gbl_MessageCallback);
+DLLEXPORT void xml6_gbl_set_generic_error_handler(xml6_gbl_MessageCallback, void (*route)(void*, xmlGenericErrorFunc));
 
 DLLEXPORT void* xml6_gbl_save_error_handlers(void);
 DLLEXPORT void xml6_gbl_restore_error_handlers(void*);
